--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -5,7 +5,7 @@
         class="md-primary"
         md-diameter="60"></md-progress-circular>
     </div>
-    <div class="content-container" layout="row" ng-show="$ctrl.isContentLoaded" class="trans-height">
+    <div class="content-container trans-height" layout="row" ng-show="$ctrl.isContentLoaded">
       <span flex="5"></span>
       <!-- Content -->
       <div flex layout="column">
