--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -25,13 +25,13 @@
             <div class="about-job">
               <h4 class="to-upper-case" ng-if="!$ctrl.isEditModeEnabled">Function</h4>
               <md-input-container ng-if="$ctrl.isEditModeEnabled" class="md-block" flex-gt-xs>
-                <label>Function</label>
+                <label>FUNCTION</label>
                 <input required name="userFunctie" ng-model="$ctrl.functie">
               </md-input-container>
               <span ng-if="!$ctrl.isEditModeEnabled">{{$ctrl.functie}}</span>
               <h4 class="to-upper-case" ng-if="!$ctrl.isEditModeEnabled">Unit</h4>
               <md-input-container ng-if="$ctrl.isEditModeEnabled" class="md-block" flex-gt-xs>
-                <label>Unit</label>
+                <label>UNIT</label>
                 <input ng-if="$ctrl.isEditModeEnabled" required name="userUnit" ng-model="$ctrl.unit">
               </md-input-container>
               <span ng-if="!$ctrl.isEditModeEnabled" class="unit">{{$ctrl.unit}}</span>
