Edit page title layout

--- a/ordineo/src/layout/linkedin/linkedin.scss
+++ b/ordineo/src/layout/linkedin/linkedin.scss
@@ -1,5 +1,9 @@
 $orange: #ec7f00;
 
+div#getDetails {
+  float: right;
+}
+
 a {
   color: $orange;
   font-size: 12px;
@@ -7,6 +11,7 @@ a {
   &:hover {
     color: $orange;
     cursor: pointer;
+    text-decoration: underline;
   }
 }
 
