--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -64,13 +64,10 @@
             </div>
             <div flex class="about-description">
               <md-input-container ng-if="$ctrl.isEditModeEnabled" class="md-block" flex-gt-xs>
-                <label>Description</label>
-          <textarea ng-if="$ctrl.isEditModeEnabled" ng-model="$ctrl.description" md-maxlength="365"
-                    md-select-on-focus></textarea>
-
-              </md-input-container>
-              <p ng-if="$ctrl.description && !$ctrl.isEditModeEnabled">{{$ctrl.description}}</p>
-              <ng-transclude></ng-transclude>
+                <label>Description</label><textarea ng-if="$ctrl.isEditModeEnabled" ng-model="$ctrl.description" md-maxlength="365"
+                    md-select-on-focus></textarea></md-input-container><p ng-if="$ctrl.description && !$ctrl.isEditModeEnabled">
+                <span ng-if="$ctrl.isCollapsed === true">{{$ctrl.shortDescription}}</span>
+                <span ng-if="$ctrl.isCollapsed === false">{{$ctrl.description}}</span></p>
             </div>
           </div>
           <div layout="row" layout-align="end center" class="about-footer">
