--- a/ordineo/src/layout/toolbar/toolbar.html
+++ b/ordineo/src/layout/toolbar/toolbar.html
@@ -9,7 +9,11 @@
         <md-button class="md-icon-button" ng-repeat="btn in $ctrl.buttons">
           <!-- Alert must be placed after the icon -->
           <md-icon md-svg-icon="{{btn.icon}}"></md-icon>
-          <div class="push"><div><p>25</p></div></div>
+          <div class="push">
+            <div>
+              <p><strong>25</strong></p>
+            </div>
+          </div>
         </md-button>
       </div>
     </div>
