--- a/ordineo/src/layout/linkedin/linkedin.html
+++ b/ordineo/src/layout/linkedin/linkedin.html
@@ -1,3 +1,3 @@
 <div id="getDetails">
-  <a>Get details</a> <md-icon md-svg-icon="{{$ctrl.linkedinIcon.icon}}"></md-icon>
+  <a ng-click="$ctrl.onClick()">Get details</a> <md-icon md-svg-icon="{{$ctrl.linkedinIcon.icon}}"></md-icon>
 </div>
