Added official logo

--- a/ordineo/src/layout/toolbar/toolbar.scss
+++ b/ordineo/src/layout/toolbar/toolbar.scss
@@ -4,7 +4,7 @@ $grey: #57595b;
 $lightGrey: #bdbcbc;
 $darkGrey: #686868;
 $mainBackground: #f4f4f4;
-$logoTopLeft: './images/Ordineo_top_left_logo.svg';
+$logoTopLeft: './images/ordineo.png';
 $logoSize: 88px;
 
 toolbar {
