--- a/ordineo/src/layout/toolbar/toolbar.scss
+++ b/ordineo/src/layout/toolbar/toolbar.scss
@@ -15,7 +15,7 @@ toolbar {
   .logo {
     background: url($logoTopLeft) no-repeat center;
     background-size: cover;
-    width: $logoSize;
+    width: 100px;
     height: $logoSize;
   }
 
