--- a/ordineo/src/layout/linkedin/linkedin.scss
+++ b/ordineo/src/layout/linkedin/linkedin.scss
@@ -7,15 +7,16 @@ $mainBackground: #f4f4f4;
 
 div#getDetails {
   float: right;
-}
 
-a {
-  color: $orange;
-  font-size: 12px;
+  a {
+    color: $orange;
+    font-size: 12px;
+    text-decoration: none;
 
-  &:hover {
-    cursor: pointer;
-    text-decoration: underline;
+    &:hover {
+      cursor: pointer;
+      text-decoration: underline;
+    }
   }
 }
 
