--- a/ordineo/src/layout/linkedin/linkedin.html
+++ b/ordineo/src/layout/linkedin/linkedin.html
@@ -1,10 +1,12 @@
 <div id="getDetails">
+  <span>
   <a href="#" ng-click="$ctrl.onClick()">Sync with Linkedin</a>
   <md-icon md-svg-icon="{{$ctrl.linkedinIcon.icon}}"></md-icon>
-  <md-icon ng-if="$ctrl.isAuthorized" md-svg-icon="{{$ctrl.linkedinIcon.icon}}"></md-icon>
-  <form style="display: none" ng-if="!$ctrl.isAuthorized" method="post" action="https://social-ordineo.cfapps.io/connect/linkedin">
-      <input type="hidden" name="username" value="Nivek" />
-      <input type="hidden" name="scope" value="r_basicprofile" />
-      <button class="btn-linkedin" type="submit">Authorize ln</button>
+  </span>
+  <form style="display: none" method="post"
+        action="https://social-ordineo.cfapps.io/connect/linkedin">
+    <input type="hidden" name="username" value="Nivek"/>
+    <input type="hidden" name="scope" value="r_basicprofile"/>
+    <button class="btn-linkedin" type="submit">Authorize ln</button>
   </form>
 </div>
