--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -60,7 +60,7 @@
                 </div>
               </div>
             </div>
-            <div flex class="about-description">
+            <div flex-gt-sm="70" class="about-description">
               <md-input-container ng-if="$ctrl.isEditModeEnabled" class="md-block" flex-gt-xs>
                 <label>Description</label><textarea ng-if="$ctrl.isEditModeEnabled" ng-model="$ctrl.description" md-maxlength="365"
                                                     md-select-on-focus></textarea></md-input-container><p ng-if="$ctrl.description && !$ctrl.isEditModeEnabled">
