--- a/ordineo/src/layout/toolbar/toolbar.html
+++ b/ordineo/src/layout/toolbar/toolbar.html
@@ -3,7 +3,7 @@
     <div class="logo"></div>
     <div class="md-toolbar-tools">
       <span flex="60" flex-gt-md="60">
-        Welcome back, <strong>Hans</strong>!
+        Welcome back, <strong>{{$ctrl.firstName}}</strong>!
       </span>
       <div flex layout="row" layout-align="center center">
         <md-button class="md-icon-button" ng-repeat="btn in $ctrl.buttons">
