--- a/ordineo/src/profile/components/about/about-directive-styles.scss
+++ b/ordineo/src/profile/components/about/about-directive-styles.scss
@@ -61,4 +61,11 @@ profile-about {
       color:white;
     }
   }
+  .about-job-detail {
+    margin-bottom: 10px;
+
+    h4 {
+      margin-bottom: 5px;
+    }
+  }
 }
