--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -1,90 +1,123 @@
 <md-card>
   <form>
-    <div class="loading-container" layout="row" layout-align="center center" ng-hide="$ctrl.isContentLoaded">
+    <div class="loading-container" layout="row" layout-align="center center" ng-if="!$ctrl.isContentLoaded">
       <md-progress-circular
         class="md-primary"
         md-diameter="60"></md-progress-circular>
     </div>
-    <div class="content-container trans-height" layout="row" ng-show="$ctrl.isContentLoaded">
+    <div class="content-container trans-height" layout="row" ng-if="$ctrl.isContentLoaded">
       <span flex="5"></span>
-      <!-- Content -->
+      <!-- Card Content row-->
       <div flex layout="column">
         <card-header
           show-btn-edit="true"
           title="{{$ctrl.title}}"
           on-edit-click="$ctrl.onEdit()"
           on-cancel-click="$ctrl.onCancel()"
-          on-save-click="$ctrl.onSubmit()"></card-header>
-          <div class="about-content" layout="row" layout-xs="column">
+          on-save-click="$ctrl.onSubmit()">
+        </card-header>
+        <div class="about-content" layout="row" layout-xs="column">
 
-            <!-- Picture -->
-            <div flex="25" class="about-img" layout="row" layout-align="start top" layout-align-xs="center center">
-              <img ng-src="{{$ctrl.profilePicture}}" alt="Profile picture" class="sample">
-            </div>
+          <!-- Left column: Picture -->
+          <div flex="25" class="about-img" layout="row" layout-align="start top" layout-align-xs="center center">
+            <img ng-src="{{$ctrl.profilePicture}}" alt="Profile picture" class="sample">
+          </div>
 
-            <div flex="30" layout="column">
-              <div class="about-job">
+          <!-- Center column: Overview -->
+          <div flex="30" layout="column">
+            <div class="about-job">
+              <!-- Function -->
+              <div class="about-function about-job-detail">
+                <div ng-if="!$ctrl.isEditModeEnabled">
+                  <h4 class="to-upper-case">Function</h4>
+                  <span>{{$ctrl.employee.function}}</span>
+                </div>
 
-                <!-- Function -->
-                <div class="about-function about-job-detail">
-                  <h4 class="to-upper-case" ng-if="!$ctrl.isEditModeEnabled">Function</h4>
-                  <md-input-container ng-if="$ctrl.isEditModeEnabled" class="md-block" flex-gt-xs>
+                <div ng-if="$ctrl.isEditModeEnabled">
+                  <md-input-container class="md-block" flex-gt-xs>
                     <label>Function</label>
-                    <input required name="userFunctie" ng-model="$ctrl.functie">
+                    <input required name="userFunctie" ng-model="$ctrl.employee.function">
                   </md-input-container>
-                  <span ng-if="!$ctrl.isEditModeEnabled">{{$ctrl.functie}}</span>
+                </div>
+              </div>
+
+              <!-- Unit -->
+              <div class="about-unit about-job-detail">
+                <div ng-if="!$ctrl.isEditModeEnabled">
+                  <h4 class="to-upper-case">Unit</h4>
+                  <span>{{$ctrl.employee.unit.name}}</span>
                 </div>
 
-                <!-- Unit -->
-                <div class="about-unit about-job-detail">
-                  <h4 class="to-upper-case" ng-if="!$ctrl.isEditModeEnabled">Unit</h4>
-                  <md-input-container ng-if="$ctrl.isEditModeEnabled" class="md-block" flex-gt-xs>
+                <div ng-if="$ctrl.isEditModeEnabled">
+                  <md-input-container class="md-block" flex-gt-xs>
                     <label>Unit</label>
-                    <input ng-if="$ctrl.isEditModeEnabled" required name="userUnit" ng-model="$ctrl.unit">
+                    <input required name="userUnit" ng-model="$ctrl.employee.unit.name">
                   </md-input-container>
-                  <span ng-if="!$ctrl.isEditModeEnabled">{{$ctrl.unit}}</span>
+                </div>
+              </div>
+
+              <!-- Gender -->
+              <div class="about-gender about-job-detail fade" ng-if="!$ctrl.isCollapsed">
+                <div ng-if="!$ctrl.isEditModeEnabled">
+                  <h4 class="to-upper-case">Gender</h4>
+                  <span>{{$ctrl.employee.gender}}</span>
                 </div>
 
-                <!-- Gender -->
-                <div class="about-gender about-job-detail fade" ng-hide="$ctrl.isCollapsed">
-                  <h4 class="to-upper-case" ng-if="!$ctrl.isEditModeEnabled">Gender</h4>
-                  <md-input-container ng-if="$ctrl.isEditModeEnabled" class="md-block" flex-gt-xs>
+                <div ng-if="$ctrl.isEditModeEnabled">
+                  <md-input-container class="md-block" flex-gt-xs>
                     <label>Gender</label>
-                    <input ng-if="$ctrl.isEditModeEnabled" required name="userGender" ng-model="$ctrl.gender">
+                    <input required name="userGender" ng-model="$ctrl.employee.gender">
                   </md-input-container>
-                  <span ng-if="!$ctrl.isEditModeEnabled">{{$ctrl.gender}}</span>
                 </div>
+              </div>
 
-                <!-- Start date -->
-                <div class="about-start-date about-job-detail fade" ng-hide="$ctrl.isCollapsed">
-                  <h4 class="to-upper-case" ng-if="!$ctrl.isEditModeEnabled">Start date</h4>
-                  <md-input-container ng-if="$ctrl.isEditModeEnabled" class="md-block" flex-gt-xs>
+              <!-- Start date -->
+              <div class="about-start-date about-job-detail fade" ng-if="!$ctrl.isCollapsed">
+                <div ng-if="!$ctrl.isEditModeEnabled">
+                  <h4 class="to-upper-case">Start date</h4>
+                  <span>{{$ctrl.employee.startDate}}</span>
+                </div>
+                <div ng-if="$ctrl.isEditModeEnabled">
+                  <md-input-container class="md-block" flex-gt-xs>
                     <label>Start date</label>
-                    <input ng-if="$ctrl.isEditModeEnabled" required name="userStartDate" ng-model="$ctrl.startDate">
+                    <input required name="userStartDate" ng-model="$ctrl.employee.startDate">
                   </md-input-container>
-                  <span ng-if="!$ctrl.isEditModeEnabled">{{$ctrl.startDate}}</span>
                 </div>
+              </div>
 
-                <!-- End date -->
-                <div class="about-end-date about-job-detail fade"
-                     ng-hide="$ctrl.isCollapsed || $ctrl.endDate === '' || $ctrl.endDate === null">
-                  <h4>End date</h4>
-                  <span>{{$ctrl.endDate}}</span>
-                </div>
-
+              <!-- End date -->
+              <div class="about-end-date about-job-detail fade"
+                   ng-if="$ctrl.isCollapsed && $ctrl.employee.resignationDate !== '' && $ctrl.employee.resignationDate !== null">
+                <h4>End date</h4>
+                <span>{{$ctrl.employee.resignationDate}}</span>
               </div>
             </div>
-            <div flex="45" flex-gt-sm="70" class="about-description">
-              <md-input-container ng-if="$ctrl.isEditModeEnabled" class="md-block" flex-gt-xs>
-                <label>Description</label><textarea ng-if="$ctrl.isEditModeEnabled" ng-model="$ctrl.description" md-maxlength="2048"
-                                                    md-select-on-focus></textarea></md-input-container><p ng-if="$ctrl.description && !$ctrl.isEditModeEnabled">
-              <span ng-if="$ctrl.isCollapsed === true">{{$ctrl.shortDescription}}</span>
-              <span ng-if="$ctrl.isCollapsed === false">{{$ctrl.description}}</span></p>
+          </div>
+
+          <!-- Right column: Description -->
+          <div flex="45" flex-gt-sm="70" class="about-description">
+            <div ng-if="$ctrl.isEditModeEnabled">
+              <md-input-container class="md-block" flex-gt-xs>
+                <label>Description</label>
+              <textarea ng-model="$ctrl.employee.description"
+                        md-maxlength="2048"
+                        md-select-on-focus>
+              </textarea>
+              </md-input-container>
             </div>
+            <p ng-if="$ctrl.employee.description && !$ctrl.isEditModeEnabled">
+              <span ng-if="$ctrl.isCollapsed">{{$ctrl.shortDescription}}</span>
+              <span ng-if="!$ctrl.isCollapsed">{{$ctrl.employee.description}}</span>
+            </p>
           </div>
-          <div layout="row" layout-align="end center" class="about-footer">
-            <md-button ng-click="$ctrl.onExpandCollapseButtonClick()" class="md-raised md-primary">{{$ctrl.footerButtonLabel}}</md-button>
-          </div>
+        </div>
+
+        <!-- Card footer -->
+        <div layout="row" layout-align="end center" class="about-footer">
+          <md-button ng-click="$ctrl.onExpandCollapseButtonClick()" class="md-raised md-primary">
+            {{$ctrl.footerButtonLabel}}
+          </md-button>
+        </div>
       </div>
       <span flex="5"></span>
     </div>
