Optimize show/edit mode

--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -7,8 +7,8 @@
     </div>
     <div class="content-container trans-height" layout="row" ng-if="about.isContentLoaded">
 
-      <!--<span flex="5"></span>-->
-      
+      <span flex="5"></span>
+
       <!-- Card content -->
       <div flex layout="column">
 
@@ -178,7 +178,7 @@
         </div>
       </div>
 
-      <!--<span flex="5"></span>-->
+      <span flex="5"></span>
 
     </div>
   </form>
