Remove hardcoded usernames and api urls

--- a/ordineo/src/layout/linkedin/linkedin.html
+++ b/ordineo/src/layout/linkedin/linkedin.html
@@ -5,7 +5,7 @@
   </span>
   <form style="display: none" method="post"
         action="{{$ctrl.action}}">
-    <input type="hidden" name="username" value="Nivek"/>
+    <input type="hidden" name="username" value="{{$ctrl.username}}"/>
     <input type="hidden" name="scope" value="r_basicprofile"/>
     <button class="btn-linkedin" type="submit">Authorize ln</button>
   </form>
